--- a/notebooks/workflow_demo1/workflow_demo1_rendered.ipynb
+++ b/notebooks/workflow_demo1/workflow_demo1_rendered.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "3642a987-2178-448d-8750-ed2637414c2c",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "7da07c96-10f3-4e2b-be24-3be2bcefce82",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "d85642bf-71ef-495a-af87-6812ebcd4cd2",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "48740c00-41bc-44df-b186-be86e664cbcb",
    "metadata": {},
    "outputs": [
@@ -201,7 +201,7 @@
        "HISTORY Revised by MAST STScI on 2023-04-12                                     "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "c4b53735-8db7-41b3-a84e-a7244044ee6c",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        "COMMENT Continuum-subtracted photon count map                                   "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "f601eb75-8d7c-49e3-925d-9ae91b3c7c41",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
        "COMMENT .                                                                       "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "id": "f1ebce11-015d-45bd-995c-4274385be67c",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "515f9beb-2c4f-45a3-b705-75694c45ff59",
    "metadata": {},
    "outputs": [],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "8031e853-c72f-4481-bfbf-6bc5757d2423",
    "metadata": {},
    "outputs": [],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "id": "b4135026-8252-4bba-904d-cdf906b935dc",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "id": "c3ab19ca-5191-4eb7-95fb-8ba926807d70",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
        "      -255.5   -255.5 1.0 .. 1.0    0.0 .. 0.0 ... 0.0244141 129.0 -46.25      180.0)>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "id": "07bb8027-82e2-432f-a5b2-deba11af0d5a",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "id": "fd7a9b7e-61c1-49e1-ad74-0489ebc69cca",
    "metadata": {},
    "outputs": [],
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "id": "214b5f15-1d61-4311-8aae-ad3a83c20f91",
    "metadata": {},
    "outputs": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "id": "b23e756e-dc15-4df9-a3ae-e5dd1c451b9d",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
        "      -255.5   -255.5 1.0 .. 1.0    0.0 .. 0.0 ... 0.0244141 129.0 -46.25      180.0)>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "id": "5399858b-333e-4e58-9bf4-f79e6f2b2ee3",
    "metadata": {},
    "outputs": [],
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 17,
    "id": "364c21bf-7a04-4ada-bf28-da2da5eb42dc",
    "metadata": {},
    "outputs": [],
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "id": "b8db0f9c-ef5e-427b-b95d-64ae14e9e2d7",
    "metadata": {},
    "outputs": [],
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 19,
    "id": "0e593b4f-98a4-470a-8cda-5026f4fff7dc",
    "metadata": {},
    "outputs": [],
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "id": "7d28b610-e9df-4d87-910b-b54549cb461f",
    "metadata": {},
    "outputs": [
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "id": "39dde8cd-646d-4807-98f0-9677cc5d944e",
    "metadata": {},
    "outputs": [],
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "id": "56113652-1674-4a0e-ba72-e6412a790353",
    "metadata": {},
    "outputs": [],
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 23,
    "id": "9728938a-066f-4d75-bafd-93776dbec765",
    "metadata": {},
    "outputs": [
@@ -870,15 +870,6 @@
       "│   │   └─version (str): 5.0.0\n",
       "│   ├─[1] (ExtensionMetadata)\n",
       "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
-      "│   │ ├─extension_uri (str): asdf://asdf-format.org/transform/extensions/transform-1.6.0\n",
-      "│   │ ├─manifest_software (Software)\n",
-      "│   │ │ ├─name (str): asdf_transform_schemas\n",
-      "│   │ │ └─version (str): 0.6.0\n",
-      "│   │ └─software (Software)\n",
-      "│   │   ├─name (str): asdf-astropy\n",
-      "│   │   └─version (str): 0.8.0\n",
-      "│   ├─[2] (ExtensionMetadata)\n",
-      "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
       "│   │ ├─extension_uri (str): asdf://asdf-format.org/astronomy/gwcs/extensions/gwcs-1.4.0\n",
       "│   │ ├─manifest_software (Software)\n",
       "│   │ │ ├─name (str): asdf_wcs_schemas\n",
@@ -886,18 +877,27 @@
       "│   │ └─software (Software)\n",
       "│   │   ├─name (str): gwcs\n",
       "│   │   └─version (str): 0.26.0\n",
-      "│   ├─[3] (ExtensionMetadata)\n",
+      "│   ├─[2] (ExtensionMetadata)\n",
       "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
       "│   │ ├─extension_uri (str): asdf://astropy.org/astropy/extensions/units-1.0.0\n",
       "│   │ └─software (Software)\n",
       "│   │   ├─name (str): asdf-astropy\n",
       "│   │   └─version (str): 0.8.0\n",
-      "│   ├─[4] (ExtensionMetadata)\n",
+      "│   ├─[3] (ExtensionMetadata)\n",
       "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
       "│   │ ├─extension_uri (str): asdf://asdf-format.org/astronomy/coordinates/extensions/coordinates-1.0.0\n",
       "│   │ ├─manifest_software (Software)\n",
       "│   │ │ ├─name (str): asdf_coordinates_schemas\n",
       "│   │ │ └─version (str): 0.4.0\n",
+      "│   │ └─software (Software)\n",
+      "│   │   ├─name (str): asdf-astropy\n",
+      "│   │   └─version (str): 0.8.0\n",
+      "│   ├─[4] (ExtensionMetadata)\n",
+      "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
+      "│   │ ├─extension_uri (str): asdf://asdf-format.org/transform/extensions/transform-1.6.0\n",
+      "│   │ ├─manifest_software (Software)\n",
+      "│   │ │ ├─name (str): asdf_transform_schemas\n",
+      "│   │ │ └─version (str): 0.6.0\n",
       "│   │ └─software (Software)\n",
       "│   │   ├─name (str): asdf-astropy\n",
       "│   │   └─version (str): 0.8.0\n",
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 24,
    "id": "5050d775-c95f-4bed-bd3e-ee6037337a2e",
    "metadata": {},
    "outputs": [
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "id": "eebd34e7-9ed4-4bf3-a916-c859bbaa9944",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "id": "f46aae34-3724-4440-8209-99a721fb7e8b",
    "metadata": {},
    "outputs": [
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 27,
    "id": "fc5717ad-05bc-4734-8ba3-235a8273ee4e",
    "metadata": {},
    "outputs": [
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 28,
    "id": "67da8c19-4a55-4f47-b88f-454c37fd8a5c",
    "metadata": {},
    "outputs": [],
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 29,
    "id": "3bbc34fc-e890-49f9-ad16-e6889cd4c478",
    "metadata": {},
    "outputs": [],
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 30,
    "id": "8ebd60f8-ffc4-47d7-9ae7-ac13cb4dd2e1",
    "metadata": {},
    "outputs": [
@@ -1307,7 +1307,7 @@
        "PosixPath('ccsp_example_spear_vela_long-c-iv_v0.0_img.asdf')"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,17 +1334,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 31,
    "id": "ce07db47-0a02-4ee5-9e5f-69077175d668",
    "metadata": {},
    "outputs": [],
    "source": [
-    "testdm = rdm.open('ccsp_example_spear_vela_long-c-iv_v1.0_img.asdf')"
+    "testdm = rdm.open('ccsp_example_spear_vela_long-c-iv_v0.0_img.asdf')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 32,
    "id": "9c24e429-6bfb-4f36-8adf-948aa3821152",
    "metadata": {
     "scrolled": true
@@ -1373,15 +1373,6 @@
       "│   │   └─version (str): 5.0.0\n",
       "│   ├─1 (ExtensionMetadata)\n",
       "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
-      "│   │ ├─extension_uri (str): asdf://asdf-format.org/transform/extensions/transform-1.6.0\n",
-      "│   │ ├─manifest_software (Software)\n",
-      "│   │ │ ├─name (str): asdf_transform_schemas\n",
-      "│   │ │ └─version (str): 0.6.0\n",
-      "│   │ └─software (Software)\n",
-      "│   │   ├─name (str): asdf-astropy\n",
-      "│   │   └─version (str): 0.8.0\n",
-      "│   ├─2 (ExtensionMetadata)\n",
-      "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
       "│   │ ├─extension_uri (str): asdf://asdf-format.org/astronomy/gwcs/extensions/gwcs-1.4.0\n",
       "│   │ ├─manifest_software (Software)\n",
       "│   │ │ ├─name (str): asdf_wcs_schemas\n",
@@ -1389,21 +1380,30 @@
       "│   │ └─software (Software)\n",
       "│   │   ├─name (str): gwcs\n",
       "│   │   └─version (str): 0.26.0\n",
-      "│   ├─3 (ExtensionMetadata)\n",
+      "│   ├─2 (ExtensionMetadata)\n",
       "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
       "│   │ ├─extension_uri (str): asdf://astropy.org/astropy/extensions/units-1.0.0\n",
       "│   │ └─software (Software)\n",
       "│   │   ├─name (str): asdf-astropy\n",
       "│   │   └─version (str): 0.8.0\n",
-      "│   ├─4 (ExtensionMetadata)\n",
+      "│   ├─3 (ExtensionMetadata)\n",
       "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
       "│   │ ├─extension_uri (str): asdf://stsci.edu/datamodels/roman/extensions/static-1.1.0\n",
       "│   │ ├─manifest_software (Software)\n",
       "│   │ │ ├─name (str): rad\n",
-      "│   │ │ └─version (str): 0.29.0.dev64+g72bc851d8\n",
+      "│   │ │ └─version (str): 0.1.0.dev1158+gb550de6f7\n",
       "│   │ └─software (Software)\n",
       "│   │   ├─name (str): roman_datamodels\n",
-      "│   │   └─version (str): 0.30.0.dev6+g727107c3b\n",
+      "│   │   └─version (str): 0.1.0.dev729+g446c92943\n",
+      "│   ├─4 (ExtensionMetadata)\n",
+      "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
+      "│   │ ├─extension_uri (str): asdf://asdf-format.org/transform/extensions/transform-1.6.0\n",
+      "│   │ ├─manifest_software (Software)\n",
+      "│   │ │ ├─name (str): asdf_transform_schemas\n",
+      "│   │ │ └─version (str): 0.6.0\n",
+      "│   │ └─software (Software)\n",
+      "│   │   ├─name (str): asdf-astropy\n",
+      "│   │   └─version (str): 0.8.0\n",
       "│   ├─5 (ExtensionMetadata)\n",
       "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
       "│   │ ├─extension_uri (str): asdf://asdf-format.org/astronomy/coordinates/extensions/coordinates-1.0.0\n",
@@ -1462,7 +1462,7 @@
       "    │ ├─median_exposure_time (float): 25.36313787917133 # Median exposure time (s) per slit width^2\n",
       "    │ ├─min_exposure_time (float): 0.1083651593083156 # Min exposure time (s) per slit width^2\n",
       "    │ └─pixel_exposure_time (float): 2.943404912948608 # Median exposure time (s) per pixel\n",
-      "    ├─file_date (Time): 2025-11-04 22:18:09.291000 # File creation date\n",
+      "    ├─file_date (Time): 2025-11-05 15:18:02.984000 # File creation date\n",
       "    ├─grasp (float): 3.13019e-07 # Grasp (cm^-2 sr^-1) per exon at line wavelength\n",
       "    ├─instrument (AsdfDictNode) # Instrument observing configuration\n",
       "    │ ├─detector (NoneType): None # Detector\n",
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 33,
    "id": "fe3a3e31-cd40-4152-a2a7-80f84d19cc8c",
    "metadata": {},
    "outputs": [
@@ -1529,17 +1529,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 34,
    "id": "333aff5b-4b6e-4fa8-ade9-5fd7f66d5fc5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "testaf = asdf.open('ccsp_example_spear_vela_long-c-iv_v1.0_img.asdf')"
+    "testaf = asdf.open('ccsp_example_spear_vela_long-c-iv_v0.0_img.asdf')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 35,
    "id": "4e45b114-8c28-4217-85ff-7df11f6193b6",
    "metadata": {},
    "outputs": [
@@ -1566,15 +1566,6 @@
       "│   │   └─version (str): 5.0.0\n",
       "│   ├─[1] (ExtensionMetadata)\n",
       "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
-      "│   │ ├─extension_uri (str): asdf://asdf-format.org/transform/extensions/transform-1.6.0\n",
-      "│   │ ├─manifest_software (Software)\n",
-      "│   │ │ ├─name (str): asdf_transform_schemas\n",
-      "│   │ │ └─version (str): 0.6.0\n",
-      "│   │ └─software (Software)\n",
-      "│   │   ├─name (str): asdf-astropy\n",
-      "│   │   └─version (str): 0.8.0\n",
-      "│   ├─[2] (ExtensionMetadata)\n",
-      "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
       "│   │ ├─extension_uri (str): asdf://asdf-format.org/astronomy/gwcs/extensions/gwcs-1.4.0\n",
       "│   │ ├─manifest_software (Software)\n",
       "│   │ │ ├─name (str): asdf_wcs_schemas\n",
@@ -1582,21 +1573,30 @@
       "│   │ └─software (Software)\n",
       "│   │   ├─name (str): gwcs\n",
       "│   │   └─version (str): 0.26.0\n",
-      "│   ├─[3] (ExtensionMetadata)\n",
+      "│   ├─[2] (ExtensionMetadata)\n",
       "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
       "│   │ ├─extension_uri (str): asdf://astropy.org/astropy/extensions/units-1.0.0\n",
       "│   │ └─software (Software)\n",
       "│   │   ├─name (str): asdf-astropy\n",
       "│   │   └─version (str): 0.8.0\n",
-      "│   ├─[4] (ExtensionMetadata)\n",
+      "│   ├─[3] (ExtensionMetadata)\n",
       "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
       "│   │ ├─extension_uri (str): asdf://stsci.edu/datamodels/roman/extensions/static-1.1.0\n",
       "│   │ ├─manifest_software (Software)\n",
       "│   │ │ ├─name (str): rad\n",
-      "│   │ │ └─version (str): 0.29.0.dev64+g72bc851d8\n",
+      "│   │ │ └─version (str): 0.1.0.dev1158+gb550de6f7\n",
       "│   │ └─software (Software)\n",
       "│   │   ├─name (str): roman_datamodels\n",
-      "│   │   └─version (str): 0.30.0.dev6+g727107c3b\n",
+      "│   │   └─version (str): 0.1.0.dev729+g446c92943\n",
+      "│   ├─[4] (ExtensionMetadata)\n",
+      "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
+      "│   │ ├─extension_uri (str): asdf://asdf-format.org/transform/extensions/transform-1.6.0\n",
+      "│   │ ├─manifest_software (Software)\n",
+      "│   │ │ ├─name (str): asdf_transform_schemas\n",
+      "│   │ │ └─version (str): 0.6.0\n",
+      "│   │ └─software (Software)\n",
+      "│   │   ├─name (str): asdf-astropy\n",
+      "│   │   └─version (str): 0.8.0\n",
       "│   ├─[5] (ExtensionMetadata)\n",
       "│   │ ├─extension_class (str): asdf.extension._manifest.ManifestExtension\n",
       "│   │ ├─extension_uri (str): asdf://asdf-format.org/astronomy/coordinates/extensions/coordinates-1.0.0\n",
@@ -1655,7 +1655,7 @@
       "    │ ├─median_exposure_time (float): 25.36313787917133 # Median exposure time (s) per slit width^2\n",
       "    │ ├─min_exposure_time (float): 0.1083651593083156 # Min exposure time (s) per slit width^2\n",
       "    │ └─pixel_exposure_time (float): 2.943404912948608 # Median exposure time (s) per pixel\n",
-      "    ├─file_date (Time): 2025-11-04 22:18:09.291000 # File creation date\n",
+      "    ├─file_date (Time): 2025-11-05 15:18:02.984000 # File creation date\n",
       "    ├─grasp (float): 3.13019e-07 # Grasp (cm^-2 sr^-1) per exon at line wavelength\n",
       "    ├─instrument (dict) # Instrument observing configuration\n",
       "    │ ├─detector (NoneType): None # Detector\n",
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 36,
    "id": "91589f49-8ce9-4328-b082-20cc581b005a",
    "metadata": {},
    "outputs": [
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 37,
    "id": "5ee7b595-9dd4-4277-8d9d-6fe2812ebb91",
    "metadata": {},
    "outputs": [],
