add comment about missing PC1_2 and PC2_1

--- a/notebooks/workflow_demo1/workflow_demo1_unrendered.ipynb
+++ b/notebooks/workflow_demo1/workflow_demo1_unrendered.ipynb
@@ -186,6 +186,7 @@
     "    crpix=[header0['CRPIX1']-1, header0['CRPIX2']-1],  # correct for FITS 1-based indexing\n",
     "    crval=[header0['CRVAL1'], header0['CRVAL2']],\n",
     "    cdelt=[header0['CDELT1'], header0['CDELT2']],\n",
+    "    # the header only has PC1_1 and PC2_2 so use the defaults for PC1_2 and PC2_1\n",
     "    pc=[[header0['PC1_1'], 0.0], [0.0, header0['PC2_2']]],\n",
     ")\n",
     "\n",
