--- a/notebooks/workflow_demo1/workflow_demo1_unrendered.ipynb
+++ b/notebooks/workflow_demo1/workflow_demo1_unrendered.ipynb
@@ -180,14 +180,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The header only has PC1_1 and PC2_2, so use the default values for PC1_2 and PC2_1\n",
+    "pc1_2 = 0.0\n",
+    "pc2_1 = 0.0\n",
+    "\n",
     "# Construct the transform based on the FITS header\n",
     "fwcs_transform = gwcs.FITSImagingWCSTransform(\n",
     "    models.Pix2Sky_Gnomonic(),  # Apply a gnomonic projection\n",
     "    crpix=[header0['CRPIX1']-1, header0['CRPIX2']-1],  # correct for FITS 1-based indexing\n",
     "    crval=[header0['CRVAL1'], header0['CRVAL2']],\n",
     "    cdelt=[header0['CDELT1'], header0['CDELT2']],\n",
-    "    # the header only has PC1_1 and PC2_2 so use the defaults for PC1_2 and PC2_1\n",
-    "    pc=[[header0['PC1_1'], 0.0], [0.0, header0['PC2_2']]],\n",
+    "    pc=[[header0['PC1_1'], pc1_2], [pc2_1, header0['PC2_2']]],\n",
     ")\n",
     "\n",
     "# Define the frames\n",
