Re-run rendered copy

--- a/notebooks/workflow_demo1/workflow_demo1_unrendered.ipynb
+++ b/notebooks/workflow_demo1/workflow_demo1_unrendered.ipynb
@@ -170,7 +170,7 @@
    "id": "2a88e8d2-a0c3-4be7-8513-0b3fe2b371c5",
    "metadata": {},
    "source": [
-    "`GWCS` allows for storing simple (FITS-like) and more complex WCS solutions with distortions and/or nonlinear components. Since we are starting with a FITS WCS we'll use `gwcs.FITSImagingWCSTransform`. Note that Python and GWCS use 0-based indexing."
+    "`GWCS` allows for storing both simple WCS solutions and more complex WCS solutions with distortions and/or nonlinear components. Since we are converting a simple FITS WCS in this example, we'll use `gwcs.FITSImagingWCSTransform`. Note that Python and GWCS use 0-based indexing, while FITS uses 1-based indexing, so we'll need a 1 pixel offset to the `CRPIXj` pixel coordinates."
    ]
   },
   {
@@ -190,7 +190,7 @@
     "    crpix=[header0['CRPIX1']-1, header0['CRPIX2']-1],  # correct for FITS 1-based indexing\n",
     "    crval=[header0['CRVAL1'], header0['CRVAL2']],\n",
     "    cdelt=[header0['CDELT1'], header0['CDELT2']],\n",
-    "    pc=[[header0['PC1_1'], pc1_2], [pc2_1, header0['PC2_2']]],\n",
+    "    pc=[[header0['PC1_1'], pc1_2], [pc2_1, header0['PC2_2']]],  # set the PCi_j matrix\n",
     ")\n",
     "\n",
     "# Define the frames\n",
@@ -618,7 +618,7 @@
    "id": "2cd0ddc1-67aa-4688-8643-b5e7d8c973bf",
    "metadata": {},
    "source": [
-    "We're done, but let's take some time to look at what we've created. If we open that file up with `roman_datamodels`, we see that the Roman key is tagged, and the keys are now commented with titles pulled from the schema associated with the tag:"
+    "We're done, but let's take some time to look at what we've created. If we open that file up with `roman_datamodels`, we see that the `roman` key is tagged, and the keys throughout its tree are now commented with titles pulled from the schema associated with the tag:"
    ]
   },
   {
@@ -731,7 +731,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
