Update links, re-run rendered copy

--- a/notebooks/workflow_demo1/workflow_demo1_unrendered.ipynb
+++ b/notebooks/workflow_demo1/workflow_demo1_unrendered.ipynb
@@ -22,7 +22,7 @@
     "The rest of the example design process would, in full, go something like this:\n",
     "- Design an ASDF tree structure and sample content for your product, passing nested dictionaries into an ASDF file object.\n",
     "- Save the resultant ASDF file object to an ASDF file: your initial sample file (without a corresponding schema).\n",
-    "- Draft a schema that matches the initial sample file you just designed, in consultation with MAST and the RAD maintainers. Send the initial sample file and draft schema to MAST and the RAD maintainers in a Github issue to the RAD repository, which will evolve into a pull request in consultation with MAST and the RAD maintainers. **Note:** We'll largely elide the details of this step in this notebook. For more information on the schema-writing part of the process, see the [File Design Guidelines](https://outerspace.stsci.edu/spaces/DraftMASTCONTRIB/pages/344588706/.File+Design+for+PITs+v1.0#id-.FileDesignforPITsv1.0-Requirements).\n",
+    "- Draft a schema that matches the initial sample file you just designed, in consultation with MAST and the RAD maintainers. Send the initial sample file and draft schema to MAST and the RAD maintainers in a Github issue to the RAD repository, which will evolve into a pull request in consultation with MAST and the RAD maintainers. **Note:** We'll largely elide the details of this step in this notebook. For more information on the schema-writing part of the process, see the [File Design Guidelines](https://outerspace.stsci.edu/spaces/ISWG/pages/356669707/File+Design+for+PITs).\n",
     "- Install the appropriate branch/fork of the RAD and roman_datamodels (with MAST and the RAD's help) into your pipeline environment.\n",
     "- Pass your ASDF tree into a Roman data model object. Save the result as your revised sample file, which now tags your schema, and deliver it to MAST for validation.\n",
     "\n",
@@ -231,7 +231,7 @@
    "source": [
     "Next, we'll pass a variety of metadata (including the WCS object we created above) from the FITS header into Python dictionaries, before we construct our ASDF file object.\n",
     "\n",
-    "Let's take a look at the [archival common metadata table in the expandable linked here](https://outerspace.stsci.edu/spaces/DraftMASTCONTRIB/pages/344588706/.File+Design+for+PITs+v1.0#id-.FileDesignforPITsv1.0-pits_common) (or if you prefer to look at schemas, see [ccsp_minimal](https://rad--747.org.readthedocs.build/en/747/generated/schemas/CCSP/ccsp_minimal-1.0.0.html) and [ccsp_custom_product](https://rad--747.org.readthedocs.build/en/747/generated/schemas/CCSP/ccsp_custom_product-1.0.0.html)) and start filling out what we can for those keys, supplemented by the other, unique metadata found in this FITS header."
+    "Let's take a look at the [archival common metadata table in the expandable linked here](https://outerspace.stsci.edu/spaces/ISWG/pages/356669707/File+Design+for+PITs#FileDesignforPITs-pits_common) (or if you prefer to look at schemas, see [ccsp_minimal](https://rad.readthedocs.io/en/latest/generated/schemas/CCSP/ccsp_minimal-1.0.0.html) and [ccsp_custom_product](https://rad.readthedocs.io/en/latest/generated/schemas/CCSP/ccsp_custom_product-1.0.0.html)) and start filling out what we can for those keys, supplemented by the other, unique metadata found in this FITS header."
    ]
   },
   {
@@ -315,7 +315,7 @@
    "id": "a76aae32-8339-4cf0-b651-7c40ce732649",
    "metadata": {},
    "source": [
-    "We have a lot of detail on the statistics of the exposure map, beyond the scope of the `exposure` parent key defined in [ccsp_custom_product](https://rad--747.org.readthedocs.build/en/747/generated/schemas/CCSP/ccsp_custom_product-1.0.0.html), so we'll create an `exposure_stats` tree to group this information.\n",
+    "We have a lot of detail on the statistics of the exposure map, beyond the scope of the `exposure` parent key defined in [ccsp_custom_product](https://rad.readthedocs.io/en/latest/generated/schemas/CCSP/ccsp_custom_product-1.0.0.html), so we'll create an `exposure_stats` tree to group this information.\n",
     "\n",
     "Because there is no character count limit on ASDF keywords, we can be slightly more verbose than we would be in FITS (e.g., `pixel_exposure_time` instead of `EXP-PIX`). Still, the definition of these keys is left to the schema."
    ]
@@ -438,7 +438,7 @@
    "id": "4834db28-27eb-4775-9217-6c29fa353ab6",
    "metadata": {},
    "source": [
-    "At this point, you would start writing a data product schema compatible with this sample, following [the guidelines](https://outerspace.stsci.edu/spaces/DraftMASTCONTRIB/pages/344588706/.File+Design+for+PITs+v1.0#id-.FileDesignforPITsv1.0-asdfASDFFileDesign). Then, you would share this file and its corresponding schema with MAST and the RAD maintainers in a [Github issue](github.com/spacetelescope/rad/issues/new) to the RAD repository."
+    "At this point, you would start writing a data product schema compatible with this sample, following [the guidelines](https://outerspace.stsci.edu/spaces/ISWG/pages/356669707/File+Design+for+PITs#FileDesignforPITs-asdfASDFFileDesign). Then, you would share this file and its corresponding schema with MAST and the RAD maintainers in a [Github issue](github.com/spacetelescope/rad/issues/new) to the RAD repository."
    ]
   },
   {
